--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -2,12 +2,12 @@
 - name: Converge - Setup Environment
   ansible.builtin.import_playbook: ../../playbooks/setup-environment.yml
 
-- name: Converge - Gather CSN
+- name: Converge - Gather CSN and Merge Logs
   hosts: all
   become: true
   tasks:
-    - name: Run Replication-Monitor role
+    - name: Run Replication-Monitor role with merging functionality
       include_role:
         name: ../../roles/Replication-Monitor
       vars:
-        csn_task_file: gather_csn.yml
+        csn_task_file: main.yml
