--- a/molecule/default/prepare.yml
+++ b/molecule/default/prepare.yml
@@ -5,5 +5,5 @@
     - name: Copy mock accesslog files to the respective test containers
       ansible.builtin.copy:
         src: "./files/mock_accesslog{{ hostvars[inventory_hostname].ansible_hostname | regex_replace('^instance', '') }}"
-        dest: "/tmp/accesslog"
+        dest: "{{ replication_monitoring_log_dir }}/accesslog{{ hostvars[inventory_hostname].ansible_hostname | regex_replace('^instance', '') }}"
         mode: '0644'
