--- a/roles/Replication-Monitor/tasks/log_replication_lag.yml
+++ b/roles/Replication-Monitor/tasks/log_replication_lag.yml
@@ -1,5 +1,9 @@
----
-- name: Log replication lag
-  # Log instances of replication lag beyond the specified threshold. Python file?
-  command: "log-replication-lag.py"
-  when: replication_lag.stdout | int > replication_lag_threshold
+- name: Execute dslogsplots script on the controller to process merged logs and generate plots
+  ansible.builtin.command:
+    cmd: >
+      python3 {{ role_path }}/scripts/dslogsplots.py
+      -i /tmp/merged_output.json
+      -c /tmp/replication_lag.csv
+      -o /tmp/replication_lag.png
+  delegate_to: localhost
+  run_once: true
