--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -43,7 +43,6 @@ provisioner:
   inventory:
     group_vars:
       all:
-        replication_monitoring_log_dir: '/tmp/'
-        replication_monitoring_lag_threshold: 120
-
-
+        replication_monitoring_log_dir: "/tmp"
+        replication_monitoring_result_dir: "/tmp"
+        replication_monitoring_lag_threshold: 1
