Clean up inventory files and fix variables

--- a/playbooks/monitor-replication.yml
+++ b/playbooks/monitor-replication.yml
@@ -1,5 +1,5 @@
 - name: Monitor Replication
-  hosts: all
-  become: yes
+  hosts: staging
+  become: true
   roles:
     - ../roles/Replication-Monitoring
