--- a/molecule/default/destroy.yml
+++ b/molecule/default/destroy.yml
@@ -5,10 +5,6 @@
   gather_facts: false
   # no_log: "{{ molecule_no_log }}"
   tasks:
-    # Developer must implement.
-
-    # Mandatory configuration for Molecule to function.
-
     - name: Populate instance config
       ansible.builtin.set_fact:
         instance_conf: {}
@@ -20,5 +16,5 @@
 
           {{ instance_conf | to_json | from_json | to_yaml }}
         dest: "{{ molecule_instance_config }}"
-        mode: 0600
+        mode: "0600"
       when: server.changed | default(false) | bool  # noqa no-handler
