--- a/playbooks/setup-environment.yml
+++ b/playbooks/setup-environment.yml
@@ -7,15 +7,16 @@
     - name: Test connectivity to all hosts
       ansible.builtin.ping:
 
-    - name: Ensure necessary packages are installed
+    - name: Ensure necessary packages are installed on the controller
       ansible.builtin.package:
         name: "{{ item }}"
         state: present
-      loop:
-        - python-matplotlib
+      with_items:
+        - python3
+        - python3-matplotlib
       delegate_to: localhost
-      run_once: true
       when: ansible_os_family == "RedHat"
+      run_once: true
 
     - name: Ensure log directory exists
       ansible.builtin.file:
