--- a/roles/ds389_replication_monitoring/tasks/main.yml
+++ b/roles/ds389_replication_monitoring/tasks/main.yml
@@ -1,4 +1,7 @@
 ---
+- name: Setup the environment for the ds389_replication_monitoring role
+  ansible.builtin.include_tasks: setup.yml
+
 - name: Gather CSN and etime values from access logs
   ansible.builtin.include_tasks: gather_data.yml
 
