--- a/roles/ds389_replication_monitoring/tasks/log_replication_lag.yml
+++ b/roles/ds389_replication_monitoring/tasks/log_replication_lag.yml
@@ -13,15 +13,12 @@
   delegate_to: localhost
   run_once: true
 
-- name: Execute dslogsplots script on the controller to process merged logs and generate plots
-  ansible.builtin.command:
-    cmd: >
-      python3 {{ role_path }}/scripts/dslogsplots.py
-      -i "{{ ds389_replication_monitoring_tmp_merged_output_file_path }}"
-      -c "{{ ds389_replication_monitoring_result_dir }}/{{ ansible_date_time.date }}_{{ ansible_date_time.hour }}/replication_lag.csv"
-      -o "{{ ds389_replication_monitoring_result_dir }}/{{ ansible_date_time.date }}_{{ ansible_date_time.hour }}/replication_lag.png"
-      -t {{ ds389_replication_monitoring_lag_threshold }}
-    creates: "{{ ds389_replication_monitoring_result_dir }}/{{ ansible_date_time.date }}_{{ ansible_date_time.hour }}/replication_lag.csv"
+- name: Generate plots out of the replication lag data
+  ds389_logs_plot:
+    input: "{{ ds389_replication_monitoring_tmp_merged_output_file_path }}"
+    csv: "{{ ds389_replication_monitoring_result_dir }}/{{ ansible_date_time.date }}_{{ ansible_date_time.hour }}/replication_lag.csv"
+    output: "{{ ds389_replication_monitoring_result_dir }}/{{ ansible_date_time.date }}_{{ ansible_date_time.hour }}/replication_lag.png"
+    replication_monitoring_threshold: "{{ ds389_replication_monitoring_lag_threshold }}"
   delegate_to: localhost
   run_once: true
   when: not replication_lag_files.stat.exists
