--- a/roles/ds389_repl_monitoring/tasks/cleanup.yml
+++ b/roles/ds389_repl_monitoring/tasks/cleanup.yml
@@ -1,16 +1,29 @@
-- name: Remove temporary dslogs script from the target machine
-  ansible.builtin.file:
-    path: "{{ ds389_repl_monitoring_tmp_dslogs_script_path }}"
-    state: absent
-
-- name: Remove temporary dslogs output files from the target machine
-  ansible.builtin.file:
-    path: "{{ ds389_repl_monitoring_tmp_analysis_output_file_path }}"
-    state: absent
-
 - name: Remove merged_output.json from the controller
   ansible.builtin.file:
     path: "{{ ds389_repl_monitoring_tmp_merged_output_file_path }}"
     state: absent
   delegate_to: localhost
   run_once: true
+
+- name: Cleanup analysis output files on remote machines
+  ansible.builtin.find:
+    paths: "{{ ds389_repl_monitoring_tmp_path }}"
+    patterns: "*_analysis_output.json"
+  register: files_to_remove
+
+- name: Remove found analysis output files on remote machines
+  ansible.builtin.file:
+    path: "{{ item.path }}"
+    state: absent
+  loop: "{{ files_to_remove.files }}"
+
+- name: Debug file list
+  ansible.builtin.debug:
+    msg: "{{ files_to_remove.files }}"
+
+- name: Remove temporary files on the controller
+  ansible.builtin.file:
+    path: "{{ item.path }}"
+    state: absent
+  loop: "{{ files_to_remove.files }}"
+  delegate_to: localhost
